--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,4 @@
+<div class='container-fluid'> 
 <h1>Listing Articles</h1>
  
 <table class='table'>
@@ -11,10 +12,12 @@
     <tr>
       <td><%= article.title %></td>
       <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
+      <td><%= link_to 'Show', article_path(article), :class=>'btn btn-info btn-sm' %></td>
+      <td><%= link_to 'Edit', edit_article_path(article), :class=>'btn btn-warning btn-sm' %></td>
+      <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure to delete this?'}, :class=>'btn btn-danger btn-sm' %></td>
     </tr>
   <% end %>
 </table>
 
-<%= link_to 'Create article', new_article_path %>
+<%= link_to 'Create article', new_article_path, :class=>'btn btn-primary btn-sm' %>
+</div>
