--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<div class='container'>
 <h2>Detail article:</h2>
 <p>
 <strong>Title:</strong>
@@ -8,5 +9,35 @@
 <strong>content:</strong>
 <%= @article.text %>
 </p>
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'back', articles_path %>
+
+<h2>Comments</h2>
+<% @article.comments.each do |comment| %>
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.commenter %>
+  </p>
+ 
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
+  <p>
+    <%= form.label :commenter %><br>
+    <%= form.text_field :commenter %>
+  </p>
+  <p>
+    <%= form.label :body %><br>
+    <%= form.text_area :body %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
+
+<%= link_to 'Edit', edit_article_path(@article), :class=>'btn btn-warning btn-sm' %> |
+<%= link_to 'back', articles_path, :class=>'btn btn-secondary btn-sm' %>
+</div>
